# CppWeb

./: .gitignore  CMakeLists.txt  README.md
backend/: .gitignore  CMakeLists.txt
backend/src/: main.cpp
backend/src/htmlgen/: html_gen.cpp  html_gen.h
backend/src/htmlgen/tags/: tag_builder.h  tags.h
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: sample.wasm
frontend/src/: App.tsx
frontend/src/components/: GenRouter.tsx  WasmPuller.tsx
frontend/src/wasm_components/: build.sh  sample.cpp  sample.mjs
